# reverb-vst3

./: CMakeLists.txt
src/: controller.cpp  controller.h  entry.cpp  ids.h  processor.cpp  processor.h
src/generators/: oscillator.cpp  oscillator.h
src/gui/: .uidesc
src/units/: allpass.cpp  allpass.h  delay.cpp  delay.h  interpolated_delay.cpp  interpolated_delay.h  lowpass1.cpp  lowpass1.h  modulated_interpolated_allpass.cpp  modulated_interpolated_allpass.h  my_reverb.cpp  my_reverb.h  unit.cpp  unit.h
